# Tutor-Website

./: Makefile  README.md  runBoth.sh
.github/workflows/: frontend.node.js.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  README.md  app.py  appointments.py  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  runBackend.sh  schema.prisma
backend/blueprints/: admin.py  appointment.py  appointments.py  auth.py  direct_message.py  document.py  example.py  notifications.py  search.py  student.py  tutor.py  tutorial.py  utils.py
backend/helpers/: admin_id_check.py  check_user_account_type.py  error_handlers.py  my_request.py  process_time_block.py  rating_calc.py  views.py
backend/jsonschemas/: __init__.py  admin_create_schema.py  appointment_accept_schema.py  appointment_delete_schema.py  appointment_get_schema.py  appointment_message_schema.py  appointment_messages_schema.py  appointment_modify_schema.py  appointment_rating_schema.py  appointment_request_schema.py  appointments_schema.py  direct_message_info_schema.py  direct_message_schema.py  document_delete_schema.py  document_upload_schema.py  login_schema.py  register_schema.py  reset_password_schema.py  reused_properties.py  student_modify_schema.py  tutor_modify_schema.py  tutor_search_schema.py  user_search_schema.py
backend/migrations/20231006064926_unique_constraint_fix/: migration.sql
backend/migrations/20231007175716_changed_subject_model_to_be_less_complicated/: migration.sql
backend/prisma/: schema.prisma
backend/prisma/migrations/20230927125839_initial_setup/: migration.sql
backend/prisma/migrations/20230929164525_complete_initial_schema/: migration.sql
backend/prisma/migrations/20231009090249_fixed_password_field_name_in_admin/: migration.sql
backend/prisma/migrations/20231013093307_unified_user_table/: migration.sql
backend/prisma/migrations/20231015092508_sprint_2_update/: migration.sql
backend/prisma/migrations/20231020170423_sprint_2_update/: migration.sql
backend/prisma/migrations/20231028111813_adding_unique_constraints_for_easier_finding/: migration.sql
backend/prisma/migrations/20231031115321_sprint_3_prep/: migration.sql
backend/prisma/migrations/20231102092159_sprint_3_update/: migration.sql
backend/prisma/migrations/20231102104919_sprint_3_fix_to_schema/: migration.sql
backend/prisma/migrations/20231102105157_additional_unique_constraints/: migration.sql
backend/prisma/migrations/20231103132827_added_optional_constraints_to_notifications/: migration.sql
backend/prisma/migrations/20231107134041_/: migration.sql
backend/prisma/migrations/20231112043147_notification_remove_appointment_id_unique_constraint/: migration.sql
backend/tests/: conftest.py  test_admin.py  test_appointment.py  test_appointments.py  test_auth.py  test_direct_message.py  test_document.py  test_notifications.py  test_search.py  test_student.py  test_tutor.py  test_tutorial.py  updateTestSchema.sh
backend/tests/prisma/: schema.prisma  test.db  test.db-journal
frontend/: .env.local.example  .eslintrc.json  .prettierrc.json  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/components/: NameFromId.tsx  appointmentDialog.tsx  deleteModal.tsx  documentImg.tsx  documentModal.tsx  editOfferings.tsx  (+19 more)
work-diaries/: z5361621.txt  z5361634.txt  z5363586.txt  z5363592.txt  z5363596.txt
(+41 files in other folders)
